--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="assets/style.css">
     <title>Russland VS Ukraina</title>
+
+     <link rel="shortcut icon" href="swords.png" type="image/x-icon">
 </head>
 
 <body class="header">
