--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Russland VS Ukraina</title>
 
-     <link rel="shortcut icon" href="swords.png" type="image/x-icon">
+     <link rel="shortcut icon" href="assets/swords.ico" type="image/x-icon">
 </head>
 
 <body class="header">
